feat: define group member's integration role